--- a/src/app/pages/items/item-card/item-card.component.scss
+++ b/src/app/pages/items/item-card/item-card.component.scss
@@ -69,6 +69,7 @@
   }
 
   .item-card-image {
+    background-color: white;
     width: 100%;
   }
 
