--- a/src/app/pages/items/items.component.scss
+++ b/src/app/pages/items/items.component.scss
@@ -13,9 +13,8 @@
     width: 100%;
 
     .logo {
-      width: 10em;
-      margin: 0 auto;
       display: block;
+      margin: 0 auto;
     }
 
     @media (max-width: $breakpoint-lg) {
